try to enable serial device

--- a/config/boards/shields/airlice/airlice.dtsi
+++ b/config/boards/shields/airlice/airlice.dtsi
@@ -1,6 +1,8 @@
 #include <physical_layouts.dtsi>
 #include <dt-bindings/zmk/matrix_transform.h>
 
+&pro_micro_serial { status = "okay";}
+
 / {
     chosen {
         zmk,physical-layout = &physical_layout0;
